# VulkanTutorial

./: .gitignore  .gitmodules  CMakeLists.txt  Compile.bat  LICENSE  README.md
Assets/Models/: base.fbx
Assets/Shaders/: DefaultShader.frag  DefaultShader.frag.spv  DefaultShader.vert  DefaultShader.vert.spv
CMake/: ExternalSettings.cmake
Shaders/: DefaultShader.frag  DefaultShader.vert  DefaultShader.vert.spv
Source/: EdelVkDebugger.cpp  EdelVkDebugger.h  Main.cxx  Pch.h  Pch.hpp  first_app.cpp  first_app.hpp  lve_device.cpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp  main.cpp  main.cxx
Source/Assets/: ImageAsset.cxx  ImageAsset.hpp  MeshAsset.cxx  MeshAsset.hpp
Source/AstrumVK/: AstrumVK.cxx  AstrumVK.hpp  Debug.cxx  Debug.hpp  GPU.hpp  Time.cxx  Time.hpp
Source/AstrumVK/Entities/: Entity.cxx  Entity.hpp
Source/AstrumVK/Framebuffers/: Framebuffer.cxx  Framebuffer.hpp
Source/AstrumVK/GPU/: CommandBuffer.cxx  CommandBuffer.hpp  GPU.cxx  GPU.hpp  QueueFamilyIndices.cxx  QueueFamilyIndices.hpp  SwapChainSupportDetails.cxx  SwapChainSupportDetails.hpp
Source/AstrumVK/Images/: Image.cxx  Image.hpp
Source/AstrumVK/Instance/: Instance.cxx  Instance.hpp
Source/AstrumVK/Models/: Entity.cxx  Entity.hpp  VAO.cxx  VAO.hpp  Vertex.cxx  Vertex.hpp
Source/AstrumVK/Pipeline/: Pipeline.cxx  Pipeline.hpp
Source/AstrumVK/Pipeline/InputAssemblyLayouts/: Vertex.cxx  Vertex.hpp
Source/AstrumVK/Pipeline/RenderPasses/: RenderPass.cxx  RenderPass.hpp
Source/AstrumVK/Pipeline/Shaders/: Shader.cxx  Shader.hpp
Source/AstrumVK/Surface/: Surface.cxx  Surface.hpp
Source/AstrumVK/SwapChain/: SwapChain.cxx  SwapChain.hpp
Source/AstrumVK/Textures/: Texture2D.cxx  Texture2D.hpp
Source/AstrumVK/Tools/: Tools.cxx  Tools.hpp
Source/AstrumVK/UBO/: UBOHost.cxx  UBOHost.hpp  UniformBuffer.cxx  UniformBuffer.hpp  UniformBufferLayout.cxx  UniformBufferLayout.hpp  UniformBufferObject.cxx  UniformBufferObject.hpp
Source/AstrumVK/UBO/Predefined/: DynamicUBO.hpp  StaticUBO.hpp
Source/Core/: App.cxx  App.hpp  Window.cxx  Window.hpp
Source/Device/: EdelVkDevice.cpp  EdelVkDevice.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  SwapChainSupportDetails.cpp  SwapChainSupportDetails.h
Source/Math/: Math.hpp
Source/Models/: Model.hpp
Source/SwapChain/: EdelVkSwapChain.h
Source/Vulkan/: Debug.cxx  Debug.hpp  Device.cxx  Device.hpp  Drawing.cxx  Drawing.hpp  GPU.cxx  GPU.hpp  Surface.cxx  Surface.hpp  SwapChain.cxx  SwapChain.hpp  Vulkan.cxx  Vulkan.hpp
Source/Vulkan/Drawing/: Drawing.cxx  Drawing.hpp  SyncObjects.cxx  SyncObjects.hpp
Source/Vulkan/Framebuffers/: Framebuffer.cxx  Framebuffer.hpp
Source/Vulkan/GPU/: GPU.cxx  GPU.hpp  QueueFamilyIndices.cxx  QueueFamilyIndices.hpp  Queues.hpp  SwapChainSupport.cxx  SwapChainSupport.hpp
Source/Vulkan/Pipeline/: Pipeline.cxx  Pipeline.hpp  RenderPass.cxx  RenderPass.hpp
Source/Vulkan/Shaders/: Shader.cxx  Shader.hpp
